src/styles/global.css
:root {
  --main-accent-color: #c0272d;
}

html,
select,
input,
button {
  font-family: "Quicksand", sans-serif;
  -webkit-font-smoothing: antialiased;
}

strong {
  font-weight: 700;
}

a {
  text-decoration: none;
  color: black;
}
h2 {
  font-size: 42px;
  font-weight: 300;
  line-height: 1;
  margin-bottom: 10px;
}

input,
select {
  width: 100%;
  font-size: 16px;
  padding: 12px 20px;
  border-radius: 50px;
  line-height: 1;
}

select {
  appearance: none;
  line-height: 1.3;
}

.select-wrapper {
  position: relative;
}
.select-wrapper:before {
  content: "";
  display: block;
  position: absolute;
  top: 48%;
  right: 20px;
  background: none;
  height: 10px;
  width: 10px;
  border-bottom: 1px solid black;
  border-right: 1px solid black;
  transform: translateY(-50%) rotate(45deg);
}

.row {
  display: grid;
  position: relative;
}

.row-container {
  display: grid;
  position: relative;
  z-index: 101;
  grid-area: 1/1;
  place-items: center;
  width: 100%;
  max-width: 1200px;
  margin: 0 auto;
}

.row-bg-image-container {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
}

.row-bg-image {
  height: 100%;
}

.row-bg-image-overlay {
  position: absolute;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  z-index: 100;
}

.columns {
  display: grid;
  align-items: center;
  margin: 20px;
  width: 100%;
}

.sixty-forty-columns {
  grid-template-columns: 60% 40%;
}
.forty-sixty-columns {
  grid-template-columns: 40% 60%;
}

.three-columns {
  grid-template-columns: 33.33333% 33.33333% 33.33333%;
}

.column {
  margin: 20px;
}

@media (max-width: 992px) {
  .sixty-forty-columns,
  .forty-sixty-columns,
  .three-columns {
    grid-template-columns: 100%;
  }
}

